[gd_scene load_steps=5 format=2]

[ext_resource path="res://materiais/imagem/dica_1.jpeg" type="Texture" id=1]
[ext_resource path="res://script/pista_casa_branca.gd" type="Script" id=2]
[ext_resource path="res://fonts/COURGETTE-REGULAR.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 33
extra_spacing_top = -3
font_data = ExtResource( 3 )

[node name="pista_casa_branca" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 204, 339 )
scale = Vector2( 0.555556, 0.559375 )
texture = ExtResource( 1 )

[node name="pista" type="Label" parent="Sprite"]
margin_left = -245.0
margin_top = 265.0
margin_right = 259.0
margin_bottom = 581.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "No desenvolvimento da primeira versão do manual à atual, tivemos 
algumas modificações, como a substituição de clãs4"
align = 1
valign = 1
autowrap = true

[node name="voltar" type="TextureButton" parent="Sprite"]
margin_left = 58.0
margin_top = -588.0
margin_right = 332.0
margin_bottom = -514.0

[node name="cazumbar" type="TextureButton" parent="Sprite"]
margin_left = -266.4
margin_top = -588.156
margin_right = 7.60025
margin_bottom = -514.156

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="Sprite/voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Sprite/cazumbar" to="." method="_on_cazumbar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
